--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "makeachat-frontend",
   "version": "1.0.1",
   "private": true,
-  "main": "public/electron.js",
+  "main": "build/electron.js",
   "homepage": "./",
   "author": {
     "name": "AnOldStory",
